--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@fontsource/ubuntu": "^5.2.8",
     "@tailwindcss/vite": "^4.1.14",
+    "animate.css": "^4.1.1",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.14",
     "typewriter-effect": "^2.22.0"
   },
