--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/ubuntu": "^5.2.8",
     "@tailwindcss/vite": "^4.1.14",
     "animate.css": "^4.1.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
